# spg_migration

./: .gitignore  .pre-commit-config.yaml  README.md
.cortex-plugin/: plugin.json
.github/workflows/: ci.yml
mssql-ddl-realization/: SKILL.md  pyproject.toml
mssql-ddl-realization/scripts/: adaptive_seed.py  build_dep_graph.py  deploy_schema.py  parse_ddl.py  seed_data.py  validate_chains.py
mssql-ddl-realization/tests/: test_adaptive_seed.py
mssql-spg-load/: SKILL.md
mssql-spg-orchestrator/: SKILL.md
mssql_spg_migration_validation_testing/: README.md  SKILL.md  pyproject.toml  pytest.ini
mssql_spg_migration_validation_testing/acuity/: run_validation.py
mssql_spg_migration_validation_testing/scripts/: .env.example  alternate_flow_rules.yaml  compare_proc_outputs.py  config.py  full_schema_audit.py  full_validation.py  generate_failure_report.py  generate_migration_report.py  generate_validation_markdown.py  generate_validation_markdown_v2.py  load_mssql_to_spg.py  mssql_proc_executor.py  param_discovery.py  prereq_guard.py  reporting.py  run.py  run_compare_and_reports.sh  run_reports.sh  run_validation.py  run_validation.sh  run_validation_realization.py  schema_only_audit.py  setup_validation_tables.sql  spg_proc_executor.py  validate_batch.py  validate_funcs_procs_separate.py  validate_triggers.py  validate_write_procs.py  validation_db.py
mssql_spg_migration_validation_testing/tests/: conftest.py  test_compare_verdict.py  test_config_filters.py  test_prereq_guard_logic.py  test_reclassification.py
scripts/: install-hooks.sh  pre-commit.hook
(+1 files in other folders)
